--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
     } else {
       drawer.style.display="none";
       overlay.style.display="none";
+      drawer.style.width = "min(1100px,96vw)";
     }
   }
 
