--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     .drawer-header{padding:15px 20px;border-bottom:1px solid var(--border);display:flex;justify-content:space-between;align-items:center;font-weight:900;color:var(--brand)}
     .close-x{border:none;background:none;cursor:pointer;font-size:18px;line-height:1}
     #status{padding:10px;text-align:center;font-size:12px;background:#fff3cd}
-    #columns-container{display:flex;flex:1;overflow-x:auto;background:#fff}
+    #columns-container{display:flex;flex:1;overflow-x:auto;overflow-y:hidden;background:#fff;scrollbar-width:none;-ms-overflow-style:none}
+    #columns-container::-webkit-scrollbar{height:0px}
 
     .column{flex:0 0 330px;border-right:1px solid #eee;overflow-y:auto;height:100%}
     @media (max-width:520px){.column{flex-basis:86vw}}
@@ -181,17 +182,31 @@
   document.getElementById("closeBtn").onclick = () => toggleMenu(false);
   overlay.onclick = () => toggleMenu(false);
 
+
+  function updateDrawerWidth(){
+    const cols = document.querySelectorAll('#columns-container .column').length || 1;
+    const colWidth = 330; // igual que .column
+    const desired = cols * colWidth + 1; // +1 para borde
+    const maxW = Math.floor(window.innerWidth * 0.96);
+    drawer.style.width = Math.min(desired, maxW) + "px";
+  }
+
+  window.addEventListener('resize', () => {
+    if (drawer.style.display === 'flex') updateDrawerWidth();
+  }, { passive: true });
+
+
   function toggleMenu(open){
     if(open){
       drawer.style.display="flex";
+      drawer.style.width = "330px";
       overlay.style.display="block";
       if(menuTree.length===0) loadData();
-      else { renderRootMenu();
-      updateDrawerWidth(); updateDrawerWidth(); }
+      else renderRootMenu();
     } else {
       drawer.style.display="none";
       overlay.style.display="none";
-      drawer.style.width = "330px";
+      drawer.style.width = "";
     }
   }
 
@@ -210,7 +225,6 @@
       buildTree(csv);
       status.style.display="none";
       renderRootMenu();
-      updateDrawerWidth();
     } catch(e) {
       status.style.display="block";
       status.textContent="⚠️ Error cargando datos. Revisa consola.";
@@ -293,7 +307,8 @@
         if(item.type==="specialties") renderSpecialties();
         else if(item.type==="offers") renderOffers();
         else renderAllCategories();
-      };
+    updateDrawerWidth();
+  };
       ul.appendChild(li);
     });
 
@@ -329,7 +344,6 @@
     back.className="back-only";
     back.innerHTML = BACK_CHEVRON_SVG;
     back.onclick = () => renderRootMenu();
-      updateDrawerWidth();
     const title = document.createElement("div");
     title.textContent="Ofertas";
     bar.appendChild(back);
@@ -342,7 +356,8 @@
       li.className="item";
       li.innerHTML = `<span class="label">${it.icon ? `<span class="icon">${it.icon}</span>` : ``}<span class="text">${it.name}</span></span>`;
       ul.appendChild(li);
-    });
+    updateDrawerWidth();
+  });
     col.appendChild(ul);
     container.appendChild(col);
   }
@@ -360,7 +375,6 @@
     back.className="back-only";
     back.innerHTML = BACK_CHEVRON_SVG;
     back.onclick = () => renderRootMenu();
-      updateDrawerWidth();
     const title = document.createElement("div");
     title.textContent="Especialidades";
     bar.appendChild(back);
@@ -373,7 +387,8 @@
       li.className="item";
       li.innerHTML = `<span class="label">${it.icon ? `<span class="icon">${it.icon}</span>` : ``}<span class="text">${it.name}</span></span>`;
       ul.appendChild(li);
-    });
+    updateDrawerWidth();
+  });
     col.appendChild(ul);
     container.appendChild(col);
     updateDrawerWidth();
@@ -399,13 +414,13 @@
       back.className="back-only";
       back.innerHTML = BACK_CHEVRON_SVG;
       back.onclick = () => renderRootMenu();
-      updateDrawerWidth();
       const title = document.createElement("div");
       title.textContent="Todas las categorías";
       bar.appendChild(back);
       bar.appendChild(title);
       col.appendChild(bar);
-    } else if(parentItem){
+    updateDrawerWidth();
+  } else if(parentItem){
       const h = document.createElement("div");
       h.className="column-header";
       h.textContent = displayName(parentItem.name);
@@ -441,6 +456,7 @@
 
         if (hasChild && wasActive) {
           li.classList.remove("active");
+          updateDrawerWidth();
           return;
         }
 
@@ -451,6 +467,7 @@
         if (hasChild) {
           render(item.children, level+1, item);
         }
+        updateDrawerWidth();
       };
 
       ul.appendChild(li);
@@ -459,9 +476,6 @@
     col.appendChild(ul);
     container.appendChild(col);
   }
-
-
-  window.addEventListener('resize', () => { if (drawer.style.display === 'flex') updateDrawerWidth(); });
 </script>
 </body>
 </html>
