--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
       object-fit:cover;
       display:block;
     }
-    .promo-overlay{
-      position:absolute;
-      inset:0;
-      background:linear-gradient(90deg, rgba(0,0,0,.55) 0%, rgba(0,0,0,.25) 55%, rgba(0,0,0,0) 100%);
-    }
+    .promo-overlay{ display:none; }
     .promo-link{
       position:absolute;
       inset:0;
@@ -366,7 +362,6 @@
     promo.className = "promo-card";
     promo.innerHTML = `
       <img class="promo-img" src="https://www.quirumed.com/media/wysiwyg/banners-nevera/081-245x135-homeIZ7.jpg" alt="Promo Quirumed">
-      <div class="promo-overlay"></div>
       <a class="promo-link" href="#promo" aria-label="Ver promoción"></a>
     `;
     col.appendChild(promo);
@@ -481,7 +476,6 @@
         promo2.className = "promo-card small";
         promo2.innerHTML = `
           <img class="promo-img" src="https://www.quirumed.com/media/wysiwyg/banners-nevera/081-245x135-homeDE7.jpg" alt="Promo cuidado personal y salud">
-          <div class="promo-overlay"></div>
           <a class="promo-link" href="#cuidado-personal-y-salud" aria-label="Ver promoción"></a>
         `;
         col.appendChild(promo2);
