--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
       object-fit:cover;
       display:block;
     }
-    .promo-overlay{ display:none; }
+    .promo-overlay{
+      position:absolute;
+      inset:0;
+      background:linear-gradient(90deg, rgba(0,0,0,.55) 0%, rgba(0,0,0,.25) 55%, rgba(0,0,0,0) 100%);
+    }
     .promo-link{
       position:absolute;
       inset:0;
@@ -96,6 +100,14 @@
   // ✅ Tu CSV publicado
   const DATA_URL_BASE = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTB17XxLBUzcUlZZeEh-UPryJijWIBOlec4xgD3BZ9JnF_zy3zKPdlMZpfLpr8bEygm2z5fLhp-ZxFk/pub?gid=0&single=true&output=csv";
   const DATA_URL = DATA_URL_BASE + "&_=" + Date.now();
+
+  const BANNERS_SHEET_NAME = "banners";
+  const BANNERS_URL_CANDIDATES = [
+    DATA_URL_BASE.replace("gid=0&single=true&output=csv", `single=true&output=csv&sheet=${BANNERS_SHEET_NAME}`),
+    DATA_URL_BASE.replace("gid=0&single=true&output=csv", `gid=0&single=true&output=csv&sheet=${BANNERS_SHEET_NAME}`),
+  ];
+  let bannersConfig = [];
+
 
   const CHEVRON_SVG = `<span class="chevron" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></span>`;
   const BACK_CHEVRON_SVG = `<span class="chevron" aria-hidden="true" style="transform:rotate(180deg)"><svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></span>`;
@@ -237,7 +249,86 @@
     }
   }
 
-  async function loadData(){
+    function parseCsv(text){
+    const rows=[]; let row=[]; let cur=""; let inQuotes=false;
+    for(let i=0;i<text.length;i++){
+      const ch=text[i], next=text[i+1];
+      if(ch === '"'){
+        if(inQuotes && next === '"'){ cur+='"'; i++; }
+        else inQuotes = !inQuotes;
+      } else if(ch === ',' && !inQuotes){
+        row.push(cur); cur="";
+      } else if((ch==='\n' || ch==='\r') && !inQuotes){
+        if(ch==='\r' && next==='\n') i++;
+        row.push(cur);
+        if(row.some(c=>c.trim()!=="")) rows.push(row);
+        row=[]; cur="";
+      } else cur+=ch;
+    }
+    if(cur.length || row.length){
+      row.push(cur);
+      if(row.some(c=>c.trim()!=="")) rows.push(row);
+    }
+    return rows.map(r=>r.map(c=>c.trim()));
+  }
+
+  function rowsToObjects(rows){
+    if(!rows.length) return [];
+    const header = rows[0].map(h=>norm(h));
+    const objs=[];
+    for(let i=1;i<rows.length;i++){
+      const o={};
+      rows[i].forEach((v,idx)=>{ o[header[idx]||("col"+idx)] = (v||"").replace(/^"|"$/g,"").trim(); });
+      if(Object.values(o).every(v=>!v)) continue;
+      objs.push(o);
+    }
+    return objs;
+  }
+
+  async function loadBanners(){
+    for(const baseUrl of BANNERS_URL_CANDIDATES){
+      const url = baseUrl + "&_=" + Date.now();
+      try{
+        const res = await fetch(url);
+        if(!res.ok) continue;
+        const txt = await res.text();
+        if(txt.trim().startsWith("<")) continue;
+        const rows = parseCsv(txt);
+        const objs = rowsToObjects(rows);
+        if(objs.length && (objs[0].scope || objs.find(x=>x.scope))){
+          bannersConfig = objs;
+          return;
+        }
+      }catch(e){}
+    }
+    bannersConfig = [];
+  }
+
+  function findBanner({scope,parent,after}){
+    const sc = scope ? norm(scope) : "";
+    const p = parent ? norm(displayName(parent)) : "";
+    const a = after ? norm(displayName(after)) : "";
+    return bannersConfig.find(b=>{
+      if(norm(b.scope) !== sc) return false;
+      if(p && norm(displayName(b.parent)) !== p) return false;
+      if(a && norm(displayName(b.after)) !== a) return false;
+      return true;
+    });
+  }
+
+  function renderBannerCard(b, extraClass){
+    const img = b.img || b.image || "";
+    if(!img) return null;
+    const href = b.href || b.link || "#";
+    const alt = b.title || b.alt || "Promo";
+    const card = document.createElement("div");
+    card.className = "promo-card" + (extraClass ? (" " + extraClass) : "");
+    card.innerHTML = `<img class="promo-img" src="${img}" alt="${alt}"><a class="promo-link" href="${href}" aria-label="${alt}"></a>`;
+    return card;
+  }
+
+
+async function loadData(){
     const status = document.getElementById("status");
     if (location.protocol === "file:") {
       status.style.display="block";
@@ -362,6 +453,7 @@
     promo.className = "promo-card";
     promo.innerHTML = `
       <img class="promo-img" src="https://www.quirumed.com/media/wysiwyg/banners-nevera/081-245x135-homeIZ7.jpg" alt="Promo Quirumed">
+      <div class="promo-overlay"></div>
       <a class="promo-link" href="#promo" aria-label="Ver promoción"></a>
     `;
     col.appendChild(promo);
@@ -476,6 +568,7 @@
         promo2.className = "promo-card small";
         promo2.innerHTML = `
           <img class="promo-img" src="https://www.quirumed.com/media/wysiwyg/banners-nevera/081-245x135-homeDE7.jpg" alt="Promo cuidado personal y salud">
+          <div class="promo-overlay"></div>
           <a class="promo-link" href="#cuidado-personal-y-salud" aria-label="Ver promoción"></a>
         `;
         col.appendChild(promo2);
@@ -519,29 +612,7 @@
         updateDrawerWidth();
       };
 
-      
       ul.appendChild(li);
-
-      // Banner justo después de "Vestuario desechable" en Desechables y consumibles
-      if (
-        parentItem &&
-        norm(displayName(parentItem.name)) === "desechables y consumibles" &&
-        norm(displayName(item.name)) === "vestuario desechable"
-      ) {
-        const liBanner = document.createElement("li");
-        liBanner.style.borderBottom = "none";
-
-        const promo = document.createElement("div");
-        promo.className = "promo-card small";
-        promo.innerHTML = `
-          <img class="promo-img" src="https://www.quirumed.com/media/wysiwyg/banners-nevera/081-245x135-homeDE7.jpg" alt="Promo vestuario desechable">
-          <a class="promo-link" href="#vestuario-desechable" aria-label="Ver vestuario desechable"></a>
-        `;
-
-        liBanner.appendChild(promo);
-        ul.appendChild(liBanner);
-      }
-
     });
 
     col.appendChild(ul);
